src/objects/Apttus_Config2__GuidedQuestion__c.object
<CustomObject>
    <description>Represents a question in a guided interview</description>
    <fields>
        <fullName>Apttus_Config2__Datasource__c</fullName>
        <description>The data source which provides the answer for the question</description>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the question</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InterviewName__c</fullName>
        <description>The name of the guided interview associated with the question</description>
        <label>Interview Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Guided Question</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__InterviewName__c</columns>
        <columns>Apttus_Config2__Datasource__c</columns>
        <columns>Apttus_Config2__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guided Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>